--- a/package.json
+++ b/package.json
@@ -3,6 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "browserslist": {
+    "production": [
+      "last 2 chrome version",
+      "last 2 firefox version",
+      "last 2 safari version",
+      "last 1 ie version"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
@@ -14,39 +30,43 @@
     "render:ssr:pages": "node ./php_ssr/dist/bundle.js",
     "compile:ssr:helper": "tsc ./php_ssr/SsrHelper/SsrHelper.ts",
     "last:ssr:steps": "node ./php_ssr/lastSteps.js",
-    "ssr": "npm run build:ssr && npm run render:ssr:pages && npm run last:ssr:steps",
-    "test:config": "webpack --config webpack.test.js"
+    "ssr": "npm run build && npm run build:ssr && npm run render:ssr:pages && npm run last:ssr:steps",
+    "test:config": "webpack --config webpack.test.js",
+    "server:build": "node ./node_modules/.bin/http-server ./dist/",
+    "build:server:build": "npm run build && npm run server:build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "core-js": "^3.6.1",
+    "http-server": "^0.12.1",
+    "intersection-observer": "^0.7.0",
+    "promise-polyfill": "8.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "rimraf": "^3.0.0",
-    "ncp": "^2.0.0",
-    "@babel/core": "^7.6.0",
+    "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.6.0",
+    "@babel/preset-typescript": "^7.7.7",
     "@testing-library/jest-dom": "^4.1.0",
-    "@testing-library/react": "^9.1.4",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
-    "@types/react": "^16.9.2",
+    "@testing-library/react": "^9.4.0",
+    "@types/jest": "^24.0.25",
+    "@types/node": "^12.12.22",
+    "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.2",
+    "autoprefixer": "^9.7.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^1.0.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
@@ -54,20 +74,23 @@
     "image-webpack-loader": "^6.0.0",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "ncp": "^2.0.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.0.1",
+    "rimraf": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svgo": "^1.3.0",
     "svgo-loader": "^2.2.1",
-    "terser-webpack-plugin": "^2.1.0",
-    "typescript": "^3.7.2",
+    "terser-webpack-plugin": "^2.3.1",
+    "typescript": "^3.7.4",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.5",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.8.1",
+    "webpack-dev-server": "^3.10.1",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
