--- a/package.json
+++ b/package.json
@@ -26,20 +26,22 @@
     "test": "jest ",
     "tsc": "node ./node_modules/.bin/tsc",
     "create:func": "node ./src/console/CreateReactFuncTS.js",
-    "build:ssr": "webpack --config webpack.ssr.js",
-    "render:ssr:pages": "node ./php_ssr/dist/bundle.js",
-    "compile:ssr:helper": "tsc ./php_ssr/SsrHelper/SsrHelper.ts",
-    "last:ssr:steps": "node ./php_ssr/lastSteps.js",
-    "ssr": "npm run build && npm run build:ssr && npm run render:ssr:pages && npm run last:ssr:steps",
+
+    "ssr:build": "webpack --config webpack.ssr.js",
+    "ssr:render": "node ./php_ssr/dist/bundle.js",
+    "ssr": "npm run build && npm run ssr:build && npm run ssr:render",
     "test:config": "webpack --config webpack.test.js",
-    "server:build": "node ./node_modules/.bin/http-server ./dist/",
-    "build:server:build": "npm run build && npm run server:build"
+    "server:prod": "node ./node_modules/.bin/http-server ./dist/",
+    "build:server:prod": "npm run build && npm run server:prod"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^3.6.1",
+    "@loadable/component": "^5.12.0",
+    "@loadable/server": "^5.12.0",
+    "axios": "^0.19.1",
+    "core-js": "^3.6.4",
     "http-server": "^0.12.1",
     "intersection-observer": "^0.7.0",
+    "p-min-delay": "^3.1.0",
     "promise-polyfill": "8.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -47,22 +49,24 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.7.7",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@loadable/babel-plugin": "^5.12.0",
+    "@loadable/webpack-plugin": "^5.12.0",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.4.0",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^12.12.22",
+    "@types/jest": "^24.9.0",
+    "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.2",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.7.4",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -75,7 +79,7 @@
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.5.0",
     "ncp": "^2.0.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.0.1",
@@ -84,8 +88,8 @@
     "style-loader": "^0.23.1",
     "svgo": "^1.3.0",
     "svgo-loader": "^2.2.1",
-    "terser-webpack-plugin": "^2.3.1",
-    "typescript": "^3.7.4",
+    "terser-webpack-plugin": "^2.3.2",
+    "typescript": "^3.7.5",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.41.5",
     "webpack-chunk-hash": "^0.6.0",
