--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "test": "jest ",
     "tsc": "node ./node_modules/.bin/tsc",
     "create:func": "node ./src/console/CreateReactFuncTS.js",
-
     "ssr:build": "webpack --config webpack.ssr.js",
     "ssr:render": "node ./php_ssr/dist/bundle.js",
     "ssr": "npm run build && npm run ssr:build && npm run ssr:render",
@@ -37,7 +36,7 @@
   "dependencies": {
     "@loadable/component": "^5.12.0",
     "@loadable/server": "^5.12.0",
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "http-server": "^0.12.1",
     "intersection-observer": "^0.7.0",
@@ -49,29 +48,40 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
+    "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.4.0",
-    "@types/jest": "^24.9.0",
-    "@types/node": "^12.12.24",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.0",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.27",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "autoprefixer": "^9.7.4",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^1.0.1",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-typescript": "^7.0.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -82,21 +92,25 @@
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.18.2",
     "resolve-url-loader": "^3.0.1",
-    "rimraf": "^3.0.0",
+    "rimraf": "^3.0.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svgo": "^1.3.0",
     "svgo-loader": "^2.2.1",
-    "terser-webpack-plugin": "^2.3.2",
+    "terser-webpack-plugin": "^2.3.5",
     "typescript": "^3.7.5",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^4.41.5",
+    "webpack": "^4.41.6",
     "webpack-chunk-hash": "^0.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
+  },
+  "engines": {
+    "node": ">=10.6.0"
   }
 }
